--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,23 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <!-- site icon -->
-    <link rel="icon" href="/assets/images/fevicon.png" type="image/png" />
+    <link rel="icon" href="assets/images/fevicon.png" type="image/png" />
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <!-- site css -->
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- responsive css -->
-    <link rel="stylesheet" href="/assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <!-- color css -->
-    <link rel="stylesheet" href="/assets/css/colors.css" />
+    <link rel="stylesheet" href="assets/css/colors.css" />
     <!-- select bootstrap -->
-    <link rel="stylesheet" href="/assets/css/bootstrap-select.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap-select.css" />
     <!-- scrollbar css -->
-    <link rel="stylesheet" href="/assets/css/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="assets/css/perfect-scrollbar.css" />
     <!-- custom css -->
-    <link rel="stylesheet" href="/assets/css/custom.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
+    <!-- calendar file css -->
+    <link rel="stylesheet" href="assets/js/semantic.min.css" />
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -38,29 +40,32 @@
     <div id="root"></div>
 
     <!-- jQuery -->
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/popper.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <!-- wow animation -->
-    <script src="/assets/js/animate.js"></script>
+    <script src="assets/js/animate.js"></script>
     <!-- select country -->
-    <script src="/assets/js/bootstrap-select.js"></script>
+    <script src="assets/js/bootstrap-select.js"></script>
     <!-- owl carousel -->
-    <script src="/assets/js/owl.carousel.js"></script>
+    <script src="assets/js/owl.carousel.js"></script>
     <!-- chart js -->
-    <script src="/assets/js/Chart.min.js"></script>
-    <script src="/assets/js/Chart.bundle.min.js"></script>
-    <script src="/assets/js/utils.js"></script>
-    <script src="/assets/js/analyser.js"></script>
+    <script src="assets/js/Chart.min.js"></script>
+    <script src="assets/js/Chart.bundle.min.js"></script>
+    <script src="assets/js/utils.js"></script>
+    <script src="assets/js/analyser.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- nice scrollbar -->
-    <script src="/assets/js/perfect-scrollbar.min.js"></script>
+    <script src="assets/js/perfect-scrollbar.min.js"></script>
     <script>
       var ps = new PerfectScrollbar('#sidebar');
     </script>
+    <!-- calendar file css -->    
+    <script src="assets/js/semantic.min.js"></script>
     <!-- custom js -->
-    <script defer="" src="/assets/js/custom.js"></script>
-    <script src="/assets/js/chart_custom_style1.js"></script>
+    
+    <script src="assets/js/chart_custom_style1.js"></script>
+    <script src="assets/js/custom.js"></script>
   </body>
 </html>
